Persist clock ticks to server

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "browser-bridge": "*",
     "basic-styles": "*",
     "make-request": "*",
-    "bridge-module": "*"
+    "bridge-module": "*",
+    "a-wild-universe-appeared": "*"
   }
 }
