--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "basic-styles": "*",
     "make-request": "*",
     "bridge-module": "*",
-    "a-wild-universe-appeared": "*"
+    "a-wild-universe-appeared": "*",
+    "creature": "*"
   }
 }
