--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "make-request": "*",
     "bridge-module": "*",
     "a-wild-universe-appeared": "*",
-    "creature": "*"
+    "creature": "*",
+    "add-html": "*"
   }
 }
