add start script and use env PORT

--- a/package.json
+++ b/package.json
@@ -10,5 +10,8 @@
     "a-wild-universe-appeared": "*",
     "creature": "*",
     "add-html": "*"
+  },
+  "scripts": {
+    "start": "node cycles"
   }
 }
