--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "dependencies": {
     "a-wild-universe-appeared": "^0.40.0",
-    "add-html": "*",
+    "add-html": "^0.28.0",
     "basic-styles": "^0.33.0",
     "bridge-module": "*",
     "browser-bridge": "*",
