--- a/package.json
+++ b/package.json
@@ -4,13 +4,13 @@
     "add-html": "^0.28.0",
     "basic-styles": "^0.33.0",
     "bridge-module": "*",
-    "browser-bridge": "*",
+    "browser-bridge": "^0.142.0",
     "creature": "*",
+    "error-if": "*",
     "make-request": "*",
     "module-library": "*",
     "web-element": "*",
-    "web-site": "*",
-    "error-if": "*"
+    "web-site": "*"
   },
   "scripts": {
     "start": "node cycles"
