--- a/package.json
+++ b/package.json
@@ -3,10 +3,11 @@
     "a-wild-universe-appeared": "^0.40.0",
     "add-html": "^0.28.0",
     "basic-styles": "^0.35.0",
-    "bridge-module": "*",
+    "bridge-module": "^0.37.0",
     "browser-bridge": "^0.142.0",
     "creature": "*",
     "error-if": "*",
+    "identifiable": "^0.15.0",
     "make-request": "*",
     "module-library": "*",
     "web-element": "*",
